Fix: Add postinstall script to generate Prisma client on Vercel build
- Added 'postinstall' script to run 'prisma generate' after npm install
- Updated 'build' script to explicitly run 'prisma generate' before Next.js build
- Fixes TypeScript errors on Vercel deployment related to missing Prisma client types
- Ensures Staff model and new Store fields are recognized during build

This resolves the build error:
Type error: Property 'staff' does not exist on type 'PrismaClient'
Type error: Store update fields not recognized in contact route

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "prisma:seed": "ts-node prisma/seed/index.ts"
+    "prisma:seed": "ts-node prisma/seed/index.ts",
+    "postinstall": "prisma generate"
   },
   "primsa": {
     "seed": "ts-node prisma/seed/index.ts"
