--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma migrate deploy && prisma generate && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
     "prisma:seed": "ts-node prisma/seed/index.ts",
+    "prisma:migrate": "prisma migrate deploy",
     "postinstall": "prisma generate"
   },
   "primsa": {
