Add dual database connection strategy for Vercel
- Use DIRECT_DATABASE_URL for migrations (port 5432)
- Keep DATABASE_URL for API routes (port 6543, PgBouncer)
- Build script now runs migrations with direct connection
- Fallback to continue build if migrations already applied
- Added comprehensive setup documentation in VERCEL_ENV_SETUP.md

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "npm run prisma:migrate:deploy && prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
     "prisma:seed": "ts-node prisma/seed/index.ts",
-    "prisma:migrate": "prisma migrate deploy",
+    "prisma:migrate:deploy": "DATABASE_URL=\"$DIRECT_DATABASE_URL\" prisma migrate deploy || echo 'Migrations already applied'",
     "postinstall": "prisma generate"
   },
   "primsa": {
