--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/nextjs": "^6.34.1",
     "@prisma/client": "^6.18.0",
     "@shadcn/ui": "^0.0.4",
+    "@shopify/shopify-api": "^12.1.1",
     "@vercel/blob": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
