--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.1",
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "^6.19.0",
     "@shadcn/ui": "^0.0.4",
     "@shopify/shopify-api": "^12.1.1",
     "@vercel/blob": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.552.0",
     "nanoid": "^5.1.6",
