--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "gif-encoder-2": "^1.0.5",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.552.0",
     "nanoid": "^5.1.6",
@@ -33,6 +34,7 @@
     "react-dom": "19.2.0",
     "resend": "^6.4.0",
     "shadcn-ui": "^0.9.5",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.10.4"
   },
