feat: Complete multi-brand architecture with wholesale system
Major Features:
- Multi-brand store dashboard with 3 tabs (Overview, Brands, Products)
- Store onboarding wizard with multi-brand partnership selection
- Wholesale order system (submit → Shopify draft orders → fulfillment → verification)
- Brand-specific inventory tracking with quantityIncoming
- Commission tracking per partnership (online, subscription, promo)
- Store credit per brand partnership
- Shopify customer sync for wholesale stores
- Encrypted Shopify credentials (AES-256-GCM)

Database Changes:
- StoreBrandPartnership table
- WholesaleOrder & WholesaleOrderItem tables
- StoreInventory.quantityIncoming field
- Multi-brand product associations

API Routes:
- /api/admin/stores/create - Multi-brand store creation
- /api/store/wholesale/submit - Submit wholesale orders
- /api/store/wholesale/verify/[token] - Verify received inventory
- /api/webhooks/shopify/fulfillment/* - Shopify webhooks
- /api/stores/[storeId]/partnerships - Manage partnerships
- /api/stores/[storeId]/inventory - Multi-brand inventory

UI Updates:
- Store dashboard redesign (3 tabs)
- Wholesale modal for ordering
- Multi-brand product selection wizard
- Brand management admin panel

Testing:
- 20+ helper scripts for setup & migration
- Test data for 3 VitaDreamz brands (Slumber, Bliss, Chill)
- Shopify integration test scripts

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:webpack": "next dev --no-turbopack",
     "build": "npm run prisma:migrate:deploy && prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
@@ -16,7 +17,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.1",
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "^6.18.0",
     "@shadcn/ui": "^0.0.4",
     "@shopify/shopify-api": "^12.1.1",
     "@vercel/blob": "^2.0.0",
