--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@shadcn/ui": "^0.0.4",
     "@shopify/shopify-api": "^12.1.1",
     "@vercel/blob": "^2.0.0",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
